# amik

./: Makefile.am  README  TODO  amik.spec.in  configure.ac  rakefile
amik/: Makefile.am  config.rb  graph.rb  gui.rb  logger.rb  main.py  main.rb
amik/backends/: bell_ca.rb  dummy.rb
amik/datamodel/: dummy.rb  yaml.rb
amik/util/: Makefile.am  config.rb.in
data/: Makefile.am
test/: datamodel_test.rb
tools/: template.rb
